Added Team Leader profile and updated team section

--- a/index.html
+++ b/index.html
@@ -1150,12 +1150,42 @@
     <!-- Team Section -->
     <section class="team-section" id="team">
         <div class="section-header">
-            <p class="section-subtitle">Meet The Experts</p>
-            <h2 class="section-title">Our SEO Specialists</h2>
+            <p class="section-subtitle">Meet The Team</p>
+            <h2 class="section-title">Our Leadership & Specialists</h2>
             <p class="section-description">Work with our team of seasoned SEO professionals who bring years of experience and proven success in digital marketing and search engine optimization.</p>
         </div>
         <div class="team-grid">
             <div class="team-member" data-aos="fade-up" data-aos-delay="100">
+                <a href="team-leader.html" class="team-member-link">
+                    <img src="images/team-leader.jpg" alt="Kyle - Team Leader">
+                    <div class="team-member-info">
+                        <h3>Kyle</h3>
+                        <p class="member-specialty">Team Leader</p>
+                        <p>A visionary leader with extensive experience in digital marketing and SEO strategy. Driving innovation and excellence while leading a high-performing team of SEO specialists.</p>
+                        <div class="member-stats">
+                            <div class="member-stat">
+                                <div class="stat-value">10+</div>
+                                <div class="stat-label">Years Exp.</div>
+                            </div>
+                            <div class="member-stat">
+                                <div class="stat-value">250+</div>
+                                <div class="stat-label">Projects</div>
+                            </div>
+                        </div>
+                        <div class="member-tags">
+                            <span class="member-tag">Team Leadership</span>
+                            <span class="member-tag">Strategy</span>
+                            <span class="member-tag">Innovation</span>
+                        </div>
+                        <div class="team-member-social">
+                            <a href="#" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="#" aria-label="GitHub Profile" target="_blank"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="team-member" data-aos="fade-up" data-aos-delay="200">
                 <a href="papart.html" class="team-member-link">
                     <img src="images/team1.png" alt="Papart - SEO Specialist">
                     <div class="team-member-info">
@@ -1185,7 +1215,7 @@
                     </div>
                 </a>
             </div>
-            <div class="team-member" data-aos="fade-up" data-aos-delay="200">
+            <div class="team-member" data-aos="fade-up" data-aos-delay="300">
                 <a href="indian-tech-guy.html" class="team-member-link">
                     <img src="images/team2.png" alt="Indian Tech Guy - Technical SEO Expert">
                     <div class="team-member-info">
@@ -1215,7 +1245,7 @@
                     </div>
                 </a>
             </div>
-            <div class="team-member" data-aos="fade-up" data-aos-delay="300">
+            <div class="team-member" data-aos="fade-up" data-aos-delay="400">
                 <a href="pareng-jon.html" class="team-member-link">
                     <img src="images/team3.png" alt="Pareng Jon - Content Optimization Specialist">
                     <div class="team-member-info">
