--- a/index.html
+++ b/index.html
@@ -1149,15 +1149,14 @@
 
     <!-- Team Section -->
     <section class="team-section" id="team">
+        <!-- Team Leader Section -->
         <div class="section-header">
-            <p class="section-subtitle">Meet The Team</p>
-            <h2 class="section-title">Our Leadership & Specialists</h2>
-            <p class="section-description">Work with our team of seasoned SEO professionals who bring years of experience and proven success in digital marketing and search engine optimization.</p>
+            <h2 class="section-title">OUR TEAM LEADER</h2>
         </div>
-        <div class="team-grid">
+        <div class="team-grid" style="grid-template-columns: 1fr; max-width: 800px; margin: 0 auto 80px;">
             <div class="team-member" data-aos="fade-up" data-aos-delay="100">
                 <a href="team-leader.html" class="team-member-link">
-                    <img src="images/team-leader.jpg" alt="Kyle - Team Leader">
+                    <img src="images/teamleader.jpeg" alt="Kyle - Team Leader">
                     <div class="team-member-info">
                         <h3>Kyle</h3>
                         <p class="member-specialty">Team Leader</p>
@@ -1185,7 +1184,14 @@
                     </div>
                 </a>
             </div>
-            <div class="team-member" data-aos="fade-up" data-aos-delay="200">
+        </div>
+
+        <!-- SEO Specialists Section -->
+        <div class="section-header">
+            <h2 class="section-title">OUR SEO SPECIALIST TEAM</h2>
+        </div>
+        <div class="team-grid" style="margin-top: 40px;">
+            <div class="team-member" data-aos="fade-up" data-aos-delay="100">
                 <a href="papart.html" class="team-member-link">
                     <img src="images/team1.png" alt="Papart - SEO Specialist">
                     <div class="team-member-info">
@@ -1208,14 +1214,14 @@
                             <span class="member-tag">Content Planning</span>
                         </div>
                         <div class="team-member-social">
-                            <a href="https://facebook.com/your-facebook-link" aria-label="Facebook Profile" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://linkedin.com/your-linkedin-link" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://twitter.com/your-twitter-link" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="#" aria-label="Facebook Profile" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="team-member" data-aos="fade-up" data-aos-delay="300">
+            <div class="team-member" data-aos="fade-up" data-aos-delay="200">
                 <a href="indian-tech-guy.html" class="team-member-link">
                     <img src="images/team2.png" alt="Indian Tech Guy - Technical SEO Expert">
                     <div class="team-member-info">
@@ -1238,14 +1244,14 @@
                             <span class="member-tag">Schema Markup</span>
                         </div>
                         <div class="team-member-social">
-                            <a href="https://facebook.com/your-facebook-link" aria-label="Facebook Profile" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://linkedin.com/your-linkedin-link" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://twitter.com/your-twitter-link" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="#" aria-label="Facebook Profile" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="team-member" data-aos="fade-up" data-aos-delay="400">
+            <div class="team-member" data-aos="fade-up" data-aos-delay="300">
                 <a href="pareng-jon.html" class="team-member-link">
                     <img src="images/team3.png" alt="Pareng Jon - Content Optimization Specialist">
                     <div class="team-member-info">
@@ -1268,9 +1274,9 @@
                             <span class="member-tag">PR Outreach</span>
                         </div>
                         <div class="team-member-social">
-                            <a href="https://facebook.com/your-facebook-link" aria-label="Facebook Profile" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                            <a href="https://linkedin.com/your-linkedin-link" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="https://twitter.com/your-twitter-link" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="#" aria-label="Facebook Profile" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#" aria-label="LinkedIn Profile" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#" aria-label="Twitter Profile" target="_blank"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </a>
