Updated team leader image to PNG and changed name to SEO Qpalyst

--- a/index.html
+++ b/index.html
@@ -1156,9 +1156,9 @@
         <div class="team-grid" style="grid-template-columns: 1fr; max-width: 800px; margin: 0 auto 80px;">
             <div class="team-member" data-aos="fade-up" data-aos-delay="100">
                 <a href="team-leader.html" class="team-member-link">
-                    <img src="images/teamleader.jpeg" alt="Kyle - Team Leader">
+                    <img src="images/teamleader.png" alt="SEO Qpalyst - Team Leader">
                     <div class="team-member-info">
-                        <h3>Kyle</h3>
+                        <h3>SEO Qpalyst</h3>
                         <p class="member-specialty">Team Leader</p>
                         <p>A visionary leader with extensive experience in digital marketing and SEO strategy. Driving innovation and excellence while leading a high-performing team of SEO specialists.</p>
                         <div class="member-stats">
