Updated team leader page content to SEO Qpalyst

--- a/team-leader.html
+++ b/team-leader.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Meet Kyle - Team Leader at Tal Hub Smak Dat Team | Visionary leader in digital marketing and SEO">
-    <title>Kyle - Team Leader | Tal Hub Smak Dat Team</title>
+    <meta name="description" content="Meet SEO Qpalyst - Team Leader at Tal Hub Smak Dat Team | Visionary leader in digital marketing and SEO">
+    <title>SEO Qpalyst - Team Leader | Tal Hub Smak Dat Team</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         :root {
@@ -315,10 +315,10 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-image">
-                <img src="images/team-leader.jpg" alt="Kyle - Team Leader">
+                <img src="images/teamleader.png" alt="SEO Qpalyst - Team Leader">
             </div>
             <div class="profile-info">
-                <h1>Kyle</h1>
+                <h1>SEO Qpalyst</h1>
                 <div class="profile-title">Team Leader</div>
                 <p>A visionary leader with extensive experience in digital marketing and SEO strategy. Driving innovation and excellence in search engine optimization while mentoring and leading a high-performing team of SEO specialists.</p>
                 <div class="profile-stats">
