--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
     <section class="team-section" id="team">
         <!-- Team Leader Section -->
         <div class="section-header">
-            <h2 class="section-title">OUR TEAM LEADER</h2>
+            <h2 class="section-title" style="font-size: 3.5em; background: linear-gradient(45deg, #6366f1, #ec4899); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; letter-spacing: 2px; text-align: center; margin-bottom: 40px; text-shadow: 2px 2px 4px rgba(0,0,0,0.1);">Our Team Leader</h2>
         </div>
         <div class="team-grid" style="grid-template-columns: 1fr; max-width: 800px; margin: 0 auto 80px;">
             <div class="team-member" data-aos="fade-up" data-aos-delay="100">
@@ -1188,7 +1188,7 @@
 
         <!-- SEO Specialists Section -->
         <div class="section-header">
-            <h2 class="section-title">OUR SEO SPECIALIST TEAM</h2>
+            <h2 class="section-title" style="font-size: 3.5em; background: linear-gradient(45deg, #6366f1, #ec4899); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-transform: uppercase; letter-spacing: 2px; text-align: center; margin-bottom: 40px; text-shadow: 2px 2px 4px rgba(0,0,0,0.1);">Our SEO Specialist Team</h2>
         </div>
         <div class="team-grid" style="margin-top: 40px;">
             <div class="team-member" data-aos="fade-up" data-aos-delay="100">
