--- a/team-leader.html
+++ b/team-leader.html
@@ -133,12 +133,49 @@
             border-radius: 15px;
             overflow: hidden;
             border: 3px solid rgba(255, 255, 255, 0.1);
+            position: relative;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(5px);
+        }
+
+        .profile-image::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(
+                45deg,
+                rgba(99, 102, 241, 0.1),
+                rgba(236, 72, 153, 0.1)
+            );
+            z-index: 1;
+            pointer-events: none;
         }
 
         .profile-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            display: block;
+            position: relative;
+            z-index: 0;
+            transition: transform 0.3s ease;
+        }
+
+        .profile-image:hover img {
+            transform: scale(1.05);
+        }
+
+        /* Add smooth animation for GIF loading */
+        @keyframes gifFadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .profile-image img[src$=".gif"] {
+            animation: gifFadeIn 0.5s ease-in-out;
         }
 
         .profile-info h1 {
@@ -315,7 +352,7 @@
     <div class="profile-container">
         <div class="profile-header">
             <div class="profile-image">
-                <img src="images/teamleader.png" alt="SEO Qpalyst - Team Leader">
+                <img src="images/gifteamleader.gif" alt="SEO Qpalyst - Team Leader">
             </div>
             <div class="profile-info">
                 <h1>SEO Qpalyst</h1>
